Fixed line overflow issues

--- a/app/scss/_box.scss
+++ b/app/scss/_box.scss
@@ -111,7 +111,7 @@
       .title                  {}
     }
     .id                       {margin-left:30px;
-      .name                   {font-size:20px; }
+      .name                   {font-size:20px; text-overflow: ellipsis; max-width: 198px; white-space: nowrap; overflow: hidden;}
       .service-name           {font-size:17px; font-weight:$medium; }
     }
     .id, .stats-strip         {z-index:2; }
@@ -163,6 +163,7 @@
   &.host-instance-box         {margin-bottom:18px;
     .white-box                {background:white; height:44px; }
     .name                     {text-transform: capitalize; }
+    .host                     {text-overflow: ellipsis; max-width: 210px; white-space: nowrap; overflow: hidden;}
     .name, .host              {font-size:15px; color:$slate-blue;
       span                    {font-size:13px; font-style: italic; color:#829FAB; user-select: none; line-height: 18px;}
     }
